# in-situ_ML

./: .gitignore  .gitmodules  LICENSE  README.md
QuadConv_AE/: README.md  config.yaml
QuadConv_AE/core/: model.py  quadconv_blocks.py
installation/: build_SSIM_Polaris.sh  keydb.conf  redis6.conf  subInteractive.sh
scaling/data_transfer/coDB_size/: README.md  extract_scaling.sh  extract_scaling_coDB.sh  plot_coDB_size.py  run_scaling_coDB.sh  subInteractive.sh
scaling/data_transfer/coDB_size/conf/: config_colocated.yaml
scaling/data_transfer/coDB_size/src/: CMakeCache.txt  Makefile  client.f  (+2 more)
scaling/data_transfer/data_size/: .subInteractive.sh.swp  README.md  extract_scaling.sh  plot_data_size.py  run_polaris.sh  run_scaling.sh  subInteractive.sh
scaling/data_transfer/strong_scaling/: README.md  extract_scaling.sh  launch_scaling_coDB.sh  plot_strong_scale.py
scaling/data_transfer/weak_scaling/: README.md  extract_scaling.sh  launch_scaling_clDB.sh  launch_scaling_coDB.sh  plot_weak_scale.py  submit_polaris.sh
scaling/inference/scaling/: README.md  extract_scaling.sh  launch_scaling_coDB.sh  plot_inference_scale.py
scaling/inference/single_node_smartsim/: README.md  extract_scaling.sh  plot_inference_comparison.py  resnet50_trace.py  run_polaris.sh  run_scaling.sh  subInteractive.sh
scaling/inference/single_node_torch/: README.md  extract_scaling.sh  run_polaris.sh  run_scaling_torch.sh
scaling/inference/single_node_torch/src/: CMakeLists.txt  clean.sh  doConfig.sh  env_build.sh  inference_cpp_bridge.F90  inference_torch.f  torch_inf.cpp
(+22 files in other folders)
